init unit test